2009-07-05  Markus Gutschke  <markus@shellinabox.com>

	* Released version 2.9

2009-07-04  Markus Gutschke  <markus@shellinabox.com>

	* Refined regular expressions for finding URLs.

	* Show new terminal size when resizing the browser.

	* Restored compatibility with IE5 and IE6.

2009-07-03  Markus Gutschke  <markus@shellinabox.com>

	* Added --linkify option. Default settings cause the terminal to
	recognize fully qualified URLs and to make them clickable.

2009-06-28  Markus Gutschke  <markus@shellinabox.com>

	* Added support for keyboards that have a dedicated "<" / ">" key.

2009-06-21  Markus Gutschke  <markus@shellinabox.com>

	* Added --localhost option.

	* Added support for building on ARM.

	* Respect "Connection: close" for proxies that rely on pre-HTTP/1.1
	behavior.

2009-05-24  Markus Gutschke  <markus@shellinabox.com>

	* Added SSL support for OpenBSD

2009-05-23  Markus Gutschke  <markus@shellinabox.com>

	* Released version 2.8

2009-05-22  Markus Gutschke  <markus@shellinabox.com>

	* Improved support for entering non-ASCII characters.

2009-05-20  Markus Gutschke  <markus@shellinabox.com>

	* Fixed various issues with building on OpenBSD

2009-04-28  Markus Gutschke  <markus@shellinabox.com>

	* Fixed variable expansion in service descriptions.
	
2009-04-27  Markus Gutschke  <markus@shellinabox.com>

	* Released version 2.7

	* Improved compatibility with some PAM configurations when running
	as a non-privileged user.

	* Fixed a bug that required shells to output data (e.g. a prompt)
	before they could read the first data.

	* Fixed a potential crash.

2009-04-12  Markus Gutschke  <markus@shellinabox.com>

	* Released version 2.6

	* The demo application is still incomplete, but starting to be
	somewhat functional. The BASIC interpreter supports variables, and
	can parse expressions. But it is still missing all flow-control
	commands, making it somewhat useless for writing real programs.

2009-03-30  Markus Gutschke  <markus@shellinabox.com>